--- a/login.html
+++ b/login.html
@@ -9,7 +9,6 @@
 <body>
   <header>
     <h1>Área do Colaborador</h1>
-    <p>Faça login para gerenciar seu perfil</p>
   </header>
 
   <nav>
@@ -18,27 +17,15 @@
   </nav>
 
   <main>
-    <div class="banner">
-      <img src="https://images.unsplash.com/photo-1584982751601-97dcc096659c" 
-           srcset="https://images.unsplash.com/photo-1584982751601-97dcc096659c?w=480 480w, https://images.unsplash.com/photo-1584982751601-97dcc096659c?w=1024 1024w"
-           sizes="(max-width: 600px) 480px, (max-width: 1200px) 1024px, 1600px"
-           alt="Banner Área do Colaborador">
-    </div>
     <div class="container">
-      <div class="item">
-        <h2>Login</h2>
-        <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d" 
-             srcset="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?w=480 480w, https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?w=1024 1024w"
-             sizes="(max-width: 600px) 480px, (max-width: 1200px) 1024px, 1600px"
-             alt="Imagem Login">
-        <form id="loginForm">
-          <label for="cpf">CPF:</label>
-          <input type="text" id="cpf" required>
-          <label for="password">Senha:</label>
-          <input type="password" id="password" required>
-          <button type="submit">Entrar</button>
-        </form>
-      </div>
+      <h2>Login</h2>
+      <form id="loginForm">
+        <label for="cpf">CPF:</label>
+        <input type="text" id="cpf" required>
+        <label for="password">Senha:</label>
+        <input type="password" id="password" required>
+        <button type="submit">Entrar</button>
+      </form>
     </div>
 
     <div id="cadastroPopup" class="popup">
@@ -52,7 +39,7 @@
           <label for="cpf">CPF:</label>
           <input type="text" id="cpf" required>
           <label for="password">Senha:</label>
-          <input type="password" id="password" required>
+          <input type="password" id="password" required minlength="6">
           <button type="submit">Cadastrar</button>
           <button type="button" onclick="hideCadastro()">Fechar</button>
         </form>
@@ -64,6 +51,7 @@
         <h2>Área do Colaborador</h2>
         <p id="userInfo"></p>
         <button onclick="showEditUser()">Editar Perfil</button>
+        <button onclick="logout()">Sair</button>
         <button onclick="hideColaborador()">Fechar</button>
       </div>
     </div>
@@ -80,7 +68,7 @@
           <label for="editCpf">CPF:</label>
           <input type="text" id="editCpf" required>
           <label for="editPassword">Senha:</label>
-          <input type="password" id="editPassword" required>
+          <input type="password" id="editPassword" required minlength="6">
           <button type="submit">Salvar</button>
           <button type="button" onclick="hideEditUser()">Fechar</button>
         </form>
@@ -93,12 +81,11 @@
   </footer>
 
   <script>
-    let users = JSON.parse(localStorage.getItem('users')) || [];
-    let currentUser = JSON.parse(localStorage.getItem('currentUser'));
+    let currentUser = JSON.parse(localStorage.getItem('currentUser')) || null;
 
     function showCadastro() { document.getElementById("cadastroPopup").style.display = "flex"; }
     function hideCadastro() { document.getElementById("cadastroPopup").style.display = "none"; }
-    function showColaborador() { 
+    function showColaborador() {
       if (currentUser) {
         document.getElementById("userInfo").innerText = `Bem-vindo, ${currentUser.nome}! Email: ${currentUser.email}`;
         document.getElementById("colaboradorPopup").style.display = "flex";
@@ -107,13 +94,18 @@
       }
     }
     function hideColaborador() { document.getElementById("colaboradorPopup").style.display = "none"; }
+    function logout() {
+      currentUser = null;
+      localStorage.removeItem('currentUser');
+      alert('Você saiu da sua conta.');
+      hideColaborador();
+    }
     function showEditUser() {
       if (!currentUser) {
         alert('Nenhum usuário logado!');
         return;
       }
-      const index = users.findIndex(u => u.cpf === currentUser.cpf);
-      document.getElementById('editUserIndex').value = index;
+      document.getElementById('editUserIndex').value = -1; // Simplificado, sem índice
       document.getElementById('editNome').value = currentUser.nome;
       document.getElementById('editEmail').value = currentUser.email;
       document.getElementById('editCpf').value = currentUser.cpf;
@@ -122,59 +114,87 @@
     }
     function hideEditUser() { document.getElementById("editUserPopup").style.display = "none"; }
 
-    document.getElementById('loginForm').addEventListener('submit', function(event) {
+    async function fetchUsers() {
+      try {
+        const response = await fetch('data/users.json');
+        if (!response.ok) throw new Error('Erro ao carregar usuários');
+        return await response.json();
+      } catch (error) {
+        console.error('Erro:', error);
+        alert('Erro ao acessar dados.');
+        return [];
+      }
+    }
+
+    async function saveUsers(users) {
+      try {
+        console.log('Salvando usuários:', users);
+        alert('Operação realizada! (Simulado - necessita de backend)');
+        return true;
+      } catch (error) {
+        console.error('Erro ao salvar:', error);
+        alert('Erro ao salvar dados.');
+        return false;
+      }
+    }
+
+    document.getElementById('loginForm').addEventListener('submit', async function(event) {
       event.preventDefault();
-      const cpf = document.getElementById('cpf').value;
+      const cpf = document.getElementById('cpf').value.trim();
       const password = document.getElementById('password').value;
+      const users = await fetchUsers();
       currentUser = users.find(u => u.cpf === cpf && u.password === password);
       if (currentUser) {
         localStorage.setItem('currentUser', JSON.stringify(currentUser));
+        alert('Login bem-sucedido!');
         showColaborador();
       } else {
-        alert('Credenciais inválidas!');
+        alert('CPF ou senha inválidos!');
       }
     });
 
-    document.getElementById('cadastroForm').addEventListener('submit', function(event) {
+    document.getElementById('cadastroForm').addEventListener('submit', async function(event) {
       event.preventDefault();
       const user = {
-        nome: document.getElementById('nome').value,
-        email: document.getElementById('email').value,
-        cpf: document.getElementById('cpf').value,
+        nome: document.getElementById('nome').value.trim(),
+        email: document.getElementById('email').value.trim(),
+        cpf: document.getElementById('cpf').value.trim(),
         password: document.getElementById('password').value
       };
+      const users = await fetchUsers();
       if (users.some(u => u.email === user.email || u.cpf === user.cpf)) {
         alert('Email ou CPF já cadastrado!');
         return;
       }
       users.push(user);
-      localStorage.setItem('users', JSON.stringify(users));
-      alert('Cadastro realizado!');
-      hideCadastro();
+      if (await saveUsers(users)) {
+        alert('Cadastro realizado!');
+        hideCadastro();
+      }
     });
 
-    document.getElementById('editUserForm').addEventListener('submit', function(event) {
+    document.getElementById('editUserForm').addEventListener('submit', async function(event) {
       event.preventDefault();
-      const index = document.getElementById('editUserIndex').value;
-      const email = document.getElementById('editEmail').value;
-      const cpf = document.getElementById('editCpf').value;
-      if (users.some((u, i) => i != index && (u.email === email || u.cpf === cpf))) {
-        alert('Email ou CPF já cadastrado!');
-        return;
-      }
       const updatedUser = {
-        nome: document.getElementById('editNome').value,
-        email,
-        cpf,
+        nome: document.getElementById('editNome').value.trim(),
+        email: document.getElementById('editEmail').value.trim(),
+        cpf: document.getElementById('editCpf').value.trim(),
         password: document.getElementById('editPassword').value
       };
-      users[index] = updatedUser;
-      localStorage.setItem('users', JSON.stringify(users));
-      localStorage.setItem('currentUser', JSON.stringify(updatedUser));
-      currentUser = updatedUser;
-      alert('Perfil atualizado!');
-      hideEditUser();
-      showColaborador();
+      const users = await fetchUsers();
+      if (users.some(u => u.email === updatedUser.email && u.cpf !== currentUser.cpf)) {
+        alert('Email já cadastrado!');
+        return;
+      }
+      const index = users.findIndex(u => u.cpf === currentUser.cpf);
+      if (index !== -1) users[index] = updatedUser;
+      if (await saveUsers(users)) {
+        localStorage.setItem('currentUser', JSON.stringify(updatedUser));
+        currentUser = updatedUser;
+        alert('Perfil atualizado!');
+        hideEditUser();
+        showColaborador();
+      }
     });
   </script>
 </body>
